# parapara

./: Makefile  README.md  com.github.aharotias2.parapara.yml  get_file_modification_time.c  meson.build  meson_options.txt  tatap.desktop  tatap.vala  tpv.vala  update-po.sh
.github/workflows/: gettext.yml
data/: Application.css  menu.xml  meson.build  parapara.appdata.xml.in  parapara.desktop.in  parapara.gresource.xml  tatap.appdata.xml.in  tatap.desktop.in  tatap.gresource.xml
data/gtk/: menus.ui
debian/: changelog  control  copyright  rules
meson/: post_install.py
po/: LINGUAS  POTFILES  com.github.aharotias2.parapara.pot  com.github.aharotias2.tatap.pot  it.po  ja.po  meson.build  ru.po  tr.po
po/extra/: POTFILES  extra.pot  it.po  ja.po  tr.po
src/: Application.vala  SortOrder.vala  TatapFileList.vala  TatapImage.vala  TatapWindow.vala  Text.vala
src/Model/: DualFileAccessor.vala  Error.vala  FileList.vala  FileListIter.vala  FileSystemNotifier.vala  SingleFileAccessor.vala  SlideFileAccessor.vala  SortOrder.vala  ToolbarOption.vala  ViewMode.vala
src/ThreadData/: FileListThreadData.vala  TatapFileListThreadData.vala
src/Utils/: FileType.vala  FileUtils.vala  PixbufUtils.vala  StringUtils.c  StringUtils.vala  Strings.c  TatapFileType.vala  TatapFileUtils.vala  TatapMathUtils.vala  TatapStringUtils.vala  WidgetUtils.vala  inotify-utils.c
src/Widgets/: ActionButton.vala  DualImageView.vala  HeaderButtons.vala  Image.vala  ImageView.vala  NavigationBox.vala  ResizeDialog.vala  SingleImageView.vala  SlideImageView.vala  TatapToolBar.vala  ToolBar.vala  ToolBarRevealer.vala  ToolButton.vala  Window.vala
vapi/: config.vapi
